# simple-python-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_testing  Dockerfile_testing.dockerignore  Makefile  README.md  build.py  init.sh  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
.github/workflows/: memory_check.yaml  tests.yaml
docs/: docs.md  index.md  list-of-tools.md  python-tools.md
docs/how-to-use/: MSPV.md  building-the-project.md  definitions.md  download.md  how-to-start-developing.md  index.md  running-init-dot-sh.md  testing-the-codes.md  virtual-env.md
docs/reference/: _c_extension.md  custom.md  lib.md  main.md
docs/source/: Installation.rst  api.rst  conf.py
docs/tools/: general-tools.md  index.md
include/: custom.h
scripts/: activate_venv.sh  create_venv.sh  generate_ref_docs.py  quick_tests.sh
simple_python_template/: __init__.py  __main__.py  _c_extension.c  _c_extension.pyi  _c_extension.pyx  cpythontemplate.pxd  custom.pyi  lib.py
simple_python_template/_c_src/: custom.c
simple_python_template/cli/: main.py
sources/: _c_extension.c  _c_extension.pyx  custom.c  foo.c
tests/: conftest.py  test_custom.py  test_lib.py  test_main.py
