[build-system]
# https://sam.hooke.me/note/2023/08/poetry-build-py-example/
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry-dynamic-versioning]
# enable = true
# vcs = "git"
# style = "semver"

[tool.poetry]
name = "simple-python-template"
version = "0.1.0" # Do not change, let poetry-dynamic-versioning handle it.
homepage = "https://github.com/jymchng/simple-python-template"
repository = "https://github.com/jymchng/simple-python-template"
license = "Apache-2.0"
documentation = "https://spyt.asyncmove.com"
description = ""
authors = ["Jim Chng <jimchng@outlook.com>"]
readme = "README.md"
# tuple index out of range error occurs if include = "."
packages = [{ include = "simple_python_template" }]
include = [
    { path = "simple_python_template/*.so" },
    { path = "simple_python_template/*" },
    { path = "sources/**" }, # need to include this for the packager to include it in the distribution
    { path = "include/**" } # need to include this for the packager to include it in the distribution, remember to do the same for vendored packages
]

[tool.builddotpy]
vendors = [
    {"name" = "pyawaitable", "downloadZipURL" = "https://github.com/ZeroIntensity/pyawaitable/releases/download/v1.1.0/pyawaitable-vendor.zip"},
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.scripts]
simple-python-template = "simple_python_template.cli.main:run_app"
generate-ref-docs = "scripts.generate_ref_docs:main"

[tool.poetry.dependencies]
# Be as loose as possible if writing a library.
python = ">=3.8,<3.13"
typing-extensions = "^4.12.2"
rich = ">=10.11.0"
cyclopts = "^2.9.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pre_commit = ">=2.16.0"
ruff = "0.6.2"
mypy = "1.10.1"

cython = "3.0.10"
isort = "5.13.2"
nbconvert = "7.16.4"
types-cachetools = "5.4.0.20240717"
types-filelock = "3.2.7"
types-requests = "2.32.0.20240712"
types-tabulate = "0.9.0.20240106"
types-python-dateutil = "2.9.0.20240316"
coveralls = ">=4.0.1"
creosote = "^3.0.2"
pre-commit = ">=3"
pandas = ">=1"
twine = "^5.1.1"

[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
# ipdb = ">=0.13.9"
line_profiler = ">=3.5.1"

# [[tool.poetry.source]]
# https://earthly.dev/blog/python-c-extension/
# https://stackoverflow.com/questions/60073711/how-to-build-c-extensions-via-poetry
# name = "testpypi"
# url = "https://test.pypi.org/simple/"
# priority = "secondary"


[tool.poetry.group.tests.dependencies]
coverage = { extras = ["toml"], version = ">=5.1" }
pytest-memray = "^1.7.0"
pytest = "8.3.1"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
pytest-asyncio = "0.23.8"
pytest-random-order = "1.1.1"
pytest-timeout = "2.3.1"
pytest-xdist = "3.6.1"
time-machine = "2.14.2"
pandas = "^2"

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug:",
    "if debug:",
    "if DEBUG:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["tests/"]
include = ["simple_python_template"]
exclude = ["**/__pycache__", "build_helpers/*.py"]
# ignore = ["freqtrade/vendor/**"]

[tool.ruff]
line-length = 100
extend-exclude = [".env", ".venv"]
target-version = "py38"

exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
    "env",
    ".env",
    "venv",
    ".venv",
    "build.py",
    "scripts/",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # Error
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PGH", # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",   # flake8-quotes
    "S",   # bandit
    "SIM", # flake8-simplify
    "TRY", # tryceratops
    "UP",  # pyupgrade
    "W",   # Warning
    "YTT", # flake8-2020
]

ignore = [
    "B905",   # zip strict=True; remove once python <3.10 support is dropped.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D401",
    "E402",
    "E501",
    "F401",
    "TRY003", # Avoid specifying messages outside exception class; overly strict, especially for ValueError
]

# Exclude UP036 as it's causing the "exit if < 3.9" to fail.
extend-select = [
    "C90", # mccabe
    # "B",    # bugbear
    # "N",    # pep8-naming
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle
    "UP",  # pyupgrade
    "I",   # isort
    "A",   # flake8-builtins
    "TID", # flake8-tidy-imports
    # "EXE",  # flake8-executable
    # "C4",     # flake8-comprehensions
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    # "DTZ",  # flake8-datetimez
    # "RSE",  # flake8-raise
    # "TCH",  # flake8-type-checking
    "PTH", # flake8-use-pathlib
    # "RUF",    # ruff
    "ASYNC", # flake8-async
    "NPY",   # numpy
]

extend-ignore = [
    "E241",   # Multiple spaces after comma
    "E272",   # Multiple spaces before keyword
    "E221",   # Multiple spaces before operator
    "B007",   # Loop control variable not used
    "S603",   # `subprocess` call: check for execution of untrusted input
    "S607",   # Starting a process with a partial executable path
    "S608",   # Possible SQL injection vector through string-based query construction
    "NPY002", # Numpy legacy random generator
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["freqtrade_client"]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = [
    "chr",
    "typer.Argument",
    "typer.Option",
    "fastapi.Depends",
    "fastapi.Query",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",   # use of "assert"
    "S102",   # use of "exec"
    "S106",   # possible hardcoded password.
    "PGH001", # use of "eval"
]
"freqtrade/freqai/**/*.py" = [
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
"tests/**/*.py" = [
    "S101", # allow assert in tests
    "S104", #  Possible binding to all interfaces
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "S105", # Possible hardcoded password assigned to: "secret"
    "S106", # Possible hardcoded password assigned to argument: "token_type"
    "S110", # `try`-`except`-`pass` detected, consider logging the exception
]

"ft_client/test_client/**/*.py" = [
    "S101", # allow assert in tests
]

[tool.ruff.lint.pep8-naming]
staticmethod-decorators = ["pydantic.validator", "pydantic.root_validator"]

[tool.codespell]
skip = 'poetry.lock,sources/*.c,sources/*.pyx,sources/*.pxd'
ignore-words-list = "coo,fo,strat,zar,selectin"

[tool.creosote]
venvs = [".venv"]
paths = ["simple_python_template"]
deps-file = "pyproject.toml"
sections = ["tool.poetry.dependencies"]
exclude-deps = ["rich", "typing-extensions"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_python_template*"]
exclude = ["tests", "tests.*", "user_data", "user_data*"]
namespaces = true

[tool.setuptools.dynamic]
version = { attr = "simple_python_template.__version__" }

[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  # Exclude vendor directory
  | vendor
)
'''

[tool.isort]
line_length = 100
profile = "google"
# multi_line_output=3
lines_after_imports = 2
skip_glob = [
    "**/.env*",
    "**/env/*",
    "**/.venv/*",
    "**/docs/*",
]
# known_first_party = ["freqtrade_client"]

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

asyncio_mode = "auto"
addopts = "--dist loadscope"

[tool.mypy]
ignore_missing_imports = true
namespace_packages = false
warn_unused_ignores = true
exclude = ['^build_helpers\.py$', '^ft_client/build/.*$', 'build.py', 'tests/*', 'docs/*', 'scripts/*', '/*.sh', 'simple_python_template/*.pyi']
# plugins = [""]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
# Telegram does not use implicit_optional = false in the current version.
module = "telegram.*"
implicit_optional = true

[tool.flake8]
# Default from https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-ignore
# minus E226
ignore = ["E121", "E123", "E126", "E24", "E203", "E704", "W503", "W504"]
max-line-length = 100
max-complexity = 12
exclude = [".git", "__pycache__", ".eggs", "user_data", ".venv", ".env", "build.py", "docs/*.py"]
